--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "personalportfolio",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "dependencies": {
     "jquery": "^3.5.1",
     "react": "^16.2.0",
